coffee/css/styles.css
/* formats header with image and font color  */
header {
    background-image: url(../images/paul-gilmore-145802-unsplash.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding-top: 1rem;
    padding-bottom: 5rem;
    color: white 
}

/* selects p class="motto" motto paragraph and formats it */
.motto {
    font-style: italic;
    margin-top: 0px;
    color: white
}

/* selects all h1, h2 elements  */
h1, h2 {
    font-weight: 300;
    font-family:'Raleway', sans-serif;
    margin: 0px;
}

h1 {
    font-size: 5.0rem;
}
    h2 {
        font-size: 2.5rem;
    }

/* selects all div class="container" elements  */
.container {
        max-width: 1170px;
        margin-left: auto;
        padding-right: 16em;
        padding-left: 16em;
}

/* font-family is inhered, so setting it on body sets it for the whole page */
body {
    font-family:'Nunito Sans', sans-serif;
}

/* formats background color and padding */
body {
    background-color: #F0F0F0
}

#menu {
    background-color: #F0F0F0;
    font-weight: bold;
}

/* left-aligns menu item descriptions */
dd {
    padding: 0em;
    margin: 0px;
    margin-left: auto;
}

dd + dt {
    line-height: 3;
}

dt {
    font-weight: bold;
    font-size: 1.5rem
}


div#menu > div > h2 {
margin-top: 0px;
margin-bottom: 0px;
}

main {
    background-color: #F0F0F0;
    margin: 0px;
    line-height: 1.5;
    padding-top: 10px;
    padding-bottom: 10px;
}

main h2 {
    margin: 0px
}

/* moves image of mug and saucer to right hand side */
main img {
  float: right;
  width: 300px;
}

main p{
    line-height: 1.5;
    background-color: #E0E0E0;
    margin-left: auto;
    display: block;
    overflow-wrap: break-word;
    word-wrap: break-word;
    hyphens: auto;
}

footer{
    background-color: #3E1305;
    color: white;
}

svg{
    fill: white;
    width: 1.8em;
}

